# cross-env

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs
