[package]
name = "cross-env"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "ansi2"
repository = "https://github.com/ahaoboy/cross-env"
homepage = "https://github.com/ahaoboy/cross-env"
authors = ["ahaoboy"]

[dependencies]
thiserror = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1